# FastApi-Notification-Service

notification_service/: .env.example  pyproject.toml
notification_service/database/: db.py
notification_service/models/: notification_models.py
notification_service/notification/: main.py
notification_service/notification_controller/: custome_notification.py
notification_service/notification_router/: notification_router.py
notification_service/schemas/config/pusher/: pusher.py
notification_service/schemas/config/smtp/: smtp.py
notification_service/test_pusher/: test_pusher_notification.py
notification_service/test_router/: test_router.py
notification_service/test_smptp/: test_email.py
